# xtcar

./: MPC_Tianmei.rar  README.md
devel/: .catkin  .rosinstall
devel/include/behaviour_state_machine/: GoalPose.h  GoalPoseRequest.h  GoalPoseResponse.h
devel/include/behaviour_state_machine_truck/: GoalPose.h  GoalPoseRequest.h  GoalPoseResponse.h
devel/include/mpc_msgs/: ControlCommand.h  Lane.h  TaskControl.h  TaskStatus.h  VehicleStatus.h  Waypoint.h
devel/lib/behaviour_state_machine/: behaviour_state_machine  scenario_selector
devel/lib/behaviour_state_machine_truck/: behaviour_state_machine_truck  scenario_selector_truck
devel/lib/car_simulator/: car_simulator
devel/lib/car_tf_broadcaster/: car_tf_broadcaster
devel/lib/car_tf_broadcaster_xt/: car_tf_broadcaster_xt
devel/lib/hp_hybrid_astr_node/: hp_hybrid_astr_node
devel/lib/hybrid_astar_node/: hybrid_astar_node
devel/lib/mpc_follower/: mpc_read_traj  mpc_save_traj
devel/lib/pkgconfig/: behaviour_state_machine.pc  behaviour_state_machine_truck.pc  car_simulator.pc  car_tf_broadcaster.pc  car_tf_broadcaster_xt.pc  grid_map.pc  high_performence_hybrid_astar.pc  hp_hybrid_astr_node.pc  hybrid_astar_node.pc  mpc_follower.pc  mpc_msgs.pc
devel/share/behaviour_state_machine/cmake/: behaviour_state_machine-msg-paths.cmake  behaviour_state_machineConfig.cmake
devel/share/behaviour_state_machine_truck/cmake/: behaviour_state_machine_truck-msg-paths.cmake  behaviour_state_machine_truckConfig.cmake
devel/share/car_simulator/cmake/: car_simulatorConfig.cmake
devel/share/car_tf_broadcaster/cmake/: car_tf_broadcasterConfig.cmake
devel/share/car_tf_broadcaster_xt/cmake/: car_tf_broadcaster_xtConfig.cmake
devel/share/grid_map/cmake/: grid_mapConfig.cmake
devel/share/high_performence_hybrid_astar/cmake/: high_performence_hybrid_astarConfig.cmake
devel/share/hp_hybrid_astr_node/cmake/: hp_hybrid_astr_nodeConfig.cmake
devel/share/hybrid_astar_node/cmake/: hybrid_astar_nodeConfig.cmake
devel/share/mpc_follower/cmake/: mpc_followerConfig.cmake
ompl/: build_ompl.sh
src/behaviour_state_machine/: CMakeLists.txt  package.xml
src/behaviour_state_machine/include/: behaviour_state_machine_node.h  scenario_selector.h
src/behaviour_state_machine/launch/: autoware_demo.launch  behaviour_state_machine.launch  hybrid_astar_test_dynamic.launch  hybrid_astar_test_realcar.launch  hybrid_astar_test_static.launch  multi_lidar_test.launch  scenario_selector.launch
src/behaviour_state_machine/map/: demo_up.pgm  glt_map.yaml  large_map.yaml  map.pgm  map.yaml  map2.pgm
src/behaviour_state_machine/rviz/: hybrid_astar_dynamic.rviz  hybrid_astar_realcar.rviz  hybrid_astar_static.rviz
src/behaviour_state_machine/src/: behaviour_state_machine_node.cpp  scenario_selector.cpp
src/behaviour_state_machine/srv/: GoalPose.srv
src/behaviour_state_machine_truck/: CMakeLists.txt  package.xml
src/behaviour_state_machine_truck/include/: behaviour_state_machine_truck_node.h
src/behaviour_state_machine_truck/launch/: hybrid_astar_test_realcar.launch  msi_sim_truck_hc_test.launch  real_truck_hc.launch  sim_truck_hc_test.launch  sim_truck_qc_test.launch
src/behaviour_state_machine_truck/map/: map.yaml  map1.pgm
src/behaviour_state_machine_truck/rviz/: hybrid_astar_dynamic.rviz
src/behaviour_state_machine_truck/src/: behaviour_state_machine_truck_node.cpp  scenario_selector_truck.cpp  temp.cpp
src/behaviour_state_machine_truck/srv/: GoalPose.srv
src/car_simulator/: CMakeLists.txt  package.xml
src/car_simulator/include/car_simulator/: car_simulator_core.h  vehicle_model_ros.h
src/car_simulator/launch/: car_simulator.launch
src/car_simulator/src/: car_simulator_core.cpp  car_simulator_node.cpp  vehicle_model_ros.cpp
src/car_tf_broadcaster/: CMakeLists.txt  package.xml
src/car_tf_broadcaster/include/: car_tf_broadcaster.h
src/car_tf_broadcaster/launch/: car_tf.launch  test.launch
src/car_tf_broadcaster/src/: car_tf_broadcaster.cpp
src/grid_map/: CMakeLists.txt  package.xml
src/grid_map/include/: common.h  grid_map.h
src/grid_map/launch/: start.launch
src/grid_map/rviz/: map.rviz
src/grid_map/src/: grid_map.cpp  grid_map_node.cpp
src/high_performence_hybrid_astar/: CMakeLists.txt  package.xml
src/high_performence_hybrid_astar/include/: bucketedqueue.h  dynamicvoronoi.h  high_performence_hybrid_astar.hpp  point.h  struct_definition.hpp  timer.h  vector2d.h
src/high_performence_hybrid_astar/src/: bucketedqueue.cpp  dynamicvoronoi.cpp  high_performence_hybrid_astar.cpp
src/hp_hybrid_astr_node/: CMakeLists.txt  package.xml
src/hp_hybrid_astr_node/include/hp_hybrid_astr_node/: astar_navi.h
src/hp_hybrid_astr_node/launch/: astar_navi.launch  hybrid_astar_test.launch  hybrid_astar_test_dynamic.launch  hybrid_astar_test_static.launch
src/hp_hybrid_astr_node/map/: map.yaml
src/hp_hybrid_astr_node/rviz/: hybrid_astar.rviz  hybrid_astar_dynamic.rviz  hybrid_astar_static.rviz
src/hp_hybrid_astr_node/src/astar_navi/: astar_navi.cpp  astar_navi_node.cpp
src/hybrid_astar_node/: CMakeLists.txt  package.xml
src/hybrid_astar_node/include/: hybrid_astar_node.h
src/hybrid_astar_node/launch/: hybrid_astar_test_dynamic.launch  hybrid_astar_test_static.launch
src/hybrid_astar_node/map/: map.yaml
src/hybrid_astar_node/rviz/: hybrid_astar_dynamic.rviz
src/hybrid_astar_node/src/: hybrid_astar_node.cpp
src/kalman_filter/: kal.py
src/mpc/mpc_follower/: CMakeLists.txt
src/mpc/mpc_follower/include/mpc_follower/: mpc_follower_core.h  mpc_utils.h
src/mpc/mpc_follower/include/mpc_follower/qp_solver/: qp_solver_qpoases.h
src/mpc/mpc_follower/launch/: mpc_follower.launch
src/mpc/mpc_follower/src/: mpc_follower_core.cpp  mpc_read_traj.cpp  mpc_save_traj.cpp  mpc_utils.cpp  mpc_waypoints_converter.cpp  try.cpp
src/mpc/mpc_follower/src/amathutils_lib/: Amathutils.cpp
src/mpc/mpc_msgs/: CMakeLists.txt  package.xml
src/mpc/mpc_msgs/msg/: ControlCommand.msg  TaskControl.msg  TaskStatus.msg  VehicleStatus.msg  Waypoint.msg
src/mpc/traj/: hc_mpc_traj.txt  mpc_traj.txt
(+58 files in other folders)
