<?xml version="1.0"?>
<package format="2">
  <name>car_simulator</name>
  <version>0.1.0</version>
  <description>The car_simulator package</description>
  <maintainer email="530925206@qq.com">fantasyplus</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mpc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>vehicle_sim_model</depend>

</package>
