<?xml version="1.0"?>
<package format="2">
  <name>car_tf_broadcaster_xt</name>
  <version>0.1.0</version>
  <description>The car_tf_broadcaster_xt package</description>
  
  <maintainer email="530925206@qq.com">fantasyplus</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>


</package>
