<?xml version="1.0"?>
<package format="2">
  <name>hp_hybrid_astr_node</name>
  <version>0.1.0</version>
  <description>The freespace_planner package</description>
  <maintainer email="530925206@qq.com">fantasyplus</maintainer>

  <!-- <buildtool_depend>autoware_build_flags</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <license>MIT</license>

  <depend>astar_search</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <!-- for visualization -->
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>
  <depend>op_simu</depend>
  <depend>op_utility</depend>
  <depend>vector_map_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- insert by xt -->
  <depend>high_performence_hybrid_astar</depend>
</package>
